Complete UI Refactor: Cards, Icons, Softer Colors

--- a/index.html
+++ b/index.html
@@ -1,160 +1,164 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-PH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filipino Budget Tracker</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
     <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="./styles.css">
-    <meta property="og:url" content="https://esp046-cyber.github.io/budget-tracker/">
-    <meta property="al:web:url" content="https://esp046-cyber.github.io/budget-tracker/">
-    <meta property="al:web:should_fallback" content="true">
-    <meta name="theme-color" content="#007bff">
+    <meta name="theme-color" content="#2563eb">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <script>
-        // Check if running locally (file://) - needs HTTPS for PWA
-        if (location.protocol === 'file:') {
-            document.body.innerHTML = '<h1 style="padding:50px;text-align:center;">🚫 Bawal ang file://<br><br>Gamitin ang link: <a href="https://esp046-cyber.github.io/budget-tracker/">https://esp046-cyber.github.io/budget-tracker/</a></h1>';
-        }
-        // Detect Messenger and suggest Chrome/Safari
-        if (navigator.userAgent.indexOf('FBAN') > -1 || navigator.userAgent.indexOf('FBAV') > -1) {
-            if (confirm('For best experience, open in Chrome or Safari instead of Messenger. OK to redirect?')) {
-                window.location.href = 'googlechrome://' + window.location.href || 'safari://' + window.location.href;
-            }
-        }
-    </script>
 </head>
 <body>
     <div id="app">
         <header>
-            <h1>Filipino Budget Tracker</h1>
-            <button id="install-btn" style="display: none;">Add to Home Screen</button>
+            <div class="header-content">
+                <h1>💰 Filipino Budget <span style="color:var(--accent-yellow)">Tracker</span> 🇵🇭</h1>
+                <button id="theme-toggle" onclick="toggleTheme()" aria-label="Toggle Dark Mode">🌙</button>
+            </div>
         </header>
+
         <nav>
-            <button onclick="showSection('dashboard')">Dashboard</button>
-            <button onclick="showSection('transactions')">Transactions</button>
-            <button onclick="showSection('debts')">Debts</button>
-            <button onclick="showSection('savings')">Savings</button>
-            <button onclick="showSection('settings')">Settings</button>
-            <button onclick="showSection('guide')">Guide</button>
-            <button onclick="exportData()">Export to CSV</button>
-            <input type="file" id="import-file" accept=".csv" style="display: none;">
-            <button onclick="document.getElementById('import-file').click()">Import from CSV</button>
+            <button onclick="showSection('dashboard')" id="nav-dashboard" class="active">📊 Dash</button>
+            <button onclick="showSection('transactions')" id="nav-transactions">💸 Trans</button>
+            <button onclick="showSection('debts')" id="nav-debts">🤝 Utang</button>
+            <button onclick="showSection('savings')" id="nav-savings">🐷 Ipon</button>
+            <button onclick="showSection('settings')" id="nav-settings">⚙️ Set</button>
         </nav>
+
         <main>
-            <section id="dashboard" class="section fade-in">
-                <h2>Monthly Overview</h2>
-                <div id="overview"></div>
-                <div id="budget-chart" class="chart-container"></div> <h3>Budget Alerts</h3>
+            <section id="dashboard" class="section card fade-in">
+                <h2>📊 Dashboard Overview</h2>
+                <div class="summary-grid">
+                    <div class="summary-card income">
+                        <h3>Income (Month)</h3>
+                        <p id="total-income">₱0.00</p>
+                    </div>
+                    <div class="summary-card expense">
+                        <h3>Expenses (Month)</h3>
+                        <p id="total-expense">₱0.00</p>
+                    </div>
+                    <div class="summary-card debt">
+                        <h3>Total Debt</h3>
+                        <p id="total-debt">₱0.00</p>
+                    </div>
+                    <div class="summary-card savings">
+                        <h3>Total Savings</h3>
+                        <p id="total-savings">₱0.00</p>
+                    </div>
+                </div>
+
+                <div class="chart-wrapper">
+                     <h3>Spending by Category</h3>
+                     <div id="budget-chart" class="chart-container"></div>
+                     <div id="chart-legend" class="chart-legend"></div>
+                </div>
+                
+                <h3>⚠️ Alerts</h3>
                 <ul id="alerts-list"></ul>
             </section>
-            <section id="transactions" class="section" style="display: none;">
-                <h2>Transactions</h2>
-                <div id="search-filter">
-                    <input type="text" id="search-input" placeholder="Search transactions...">
+
+            <section id="transactions" class="section card" style="display: none;">
+                <h2>💸 Transactions</h2>
+                <div id="search-filter" class="filter-bar">
+                    <input type="text" id="search-input" placeholder="🔍 Search...">
                     <select id="filter-type"><option value="">All Types</option><option value="income">Income</option><option value="expense">Expense</option></select>
-                    <select id="filter-category"><option value="">All Categories</option></select>
-                    <input type="date" id="filter-start-date">
-                    <input type="date" id="filter-end-date">
-                    <button onclick="applySearchFilter()">Filter</button>
+                    <button onclick="applySearchFilter()" class="btn-small">Filter</button>
+                    <button onclick="clearFilters()" class="btn-small btn-secondary">Clear</button>
                 </div>
+
                 <form id="transaction-form">
-                    <label>Date: <input type="date" id="trans-date" required></label>
-                    <label>Type: <select id="trans-type"><option value="income">Income</option><option value="expense">Expense</option></select></label>
-                    <label>Amount: <input type="number" id="trans-amount" required></label>
-                    <label>Currency: <select id="trans-currency"><option value="PHP">₱ PHP</option></select></label>
-                    <label>Category: <select id="trans-category"></select></label>
-                    <label>Description: <input type="text" id="trans-desc"></label>
-                    <label>Recurring: <select id="trans-recurring">
-                        <option value="none">None</option>
-                        <option value="daily">Daily</option>
-                        <option value="weekly">Weekly</option>
-                        <option value="monthly">Monthly</option>
-                    </select></label>
-                    <button type="submit">Add</button>
+                    <div class="form-row">
+                         <label>📅 Date <input type="date" id="trans-date" required></label>
+                         <label>📂 Type <select id="trans-type"><option value="expense">Expense</option><option value="income">Income</option></select></label>
+                    </div>
+                    <label>💰 Amount (₱) <input type="number" id="trans-amount" placeholder="0.00" step="0.01" required></label>
+                    <label>🏷️ Category <select id="trans-category"></select></label>
+                    <label>📝 Description <input type="text" id="trans-desc" placeholder="e.g., Sweldo, Meralco"></label>
+                    <button type="submit" class="btn-primary">➕ Add Transaction</button>
                 </form>
-                <ul id="trans-list" class="parallax"></ul>
+
+                <h3>Recent History</h3>
+                <ul id="trans-list" class="list-group"></ul>
             </section>
-            <section id="debts" class="section" style="display: none;">
-                <h2>Debt Tracker</h2>
+
+            <section id="debts" class="section card" style="display: none;">
+                <h2>🤝 Utang Tracker</h2>
                 <form id="debt-form">
-                    <label>Name: <input type="text" id="debt-name" required></label>
-                    <label>Initial Amount: ₱ <input type="number" id="debt-amount" required></label>
-                    <button type="submit">Add Debt</button>
+                    <label>👤 Name <input type="text" id="debt-name" placeholder="Sino?" required></label>
+                    <label>💰 Initial Amount (₱) <input type="number" id="debt-amount" placeholder="0.00" step="0.01" required></label>
+                    <button type="submit" class="btn-accent">➕ Add Debt</button>
                 </form>
-                <ul id="debt-list"></ul>
-                <form id="payment-form" style="display: none;">
-                    <label>Payment Amount: ₱ <input type="number" id="payment-amount" required></label>
-                    <label>Date: <input type="date" id="payment-date" required></label>
-                    <button type="submit">Add Payment</button>
-                </form>
+                <ul id="debt-list" class="list-group"></ul>
+                 <div id="payment-modal" class="modal" style="display:none;">
+                    <form id="payment-form" class="card modal-content">
+                        <h3>Add Payment</h3>
+                        <p id="paying-debt-name"></p>
+                        <label>💰 Amount (₱) <input type="number" id="payment-amount" required></label>
+                        <label>📅 Date <input type="date" id="payment-date" required></label>
+                        <button type="submit" class="btn-primary">Confirm Payment</button>
+                        <button type="button" onclick="closePaymentModal()" class="btn-secondary">Cancel</button>
+                    </form>
+                </div>
             </section>
-            <section id="savings" class="section" style="display: none;">
-                <h2>Savings Tracker</h2>
+
+            <section id="savings" class="section card" style="display: none;">
+                <h2>🐷 Ipon Goals</h2>
                 <form id="goal-form">
-                    <label>Goal Name: <input type="text" id="goal-name" required></label>
-                    <label>Target: ₱ <input type="number" id="goal-target" required></label>
-                    <button type="submit">Add Goal</button>
+                    <label>🎯 Goal Name <input type="text" id="goal-name" placeholder="Para saan?" required></label>
+                    <label>💰 Target Amount (₱) <input type="number" id="goal-target" placeholder="0.00" required></label>
+                    <button type="submit" class="btn-primary">➕ Set Goal</button>
                 </form>
-                <ul id="goal-list"></ul>
-                <form id="contrib-form" style="display: none;">
-                    <label>Contribution: ₱ <input type="number" id="contrib-amount" required></label>
-                    <label>Date: <input type="date" id="contrib-date" required></label>
-                    <button type="submit">Add Contribution</button>
-                </form>
+                <ul id="goal-list" class="list-group"></ul>
+                 <div id="contrib-modal" class="modal" style="display:none;">
+                    <form id="contrib-form" class="card modal-content">
+                        <h3>Add to Savings</h3>
+                        <label>💰 Amount (₱) <input type="number" id="contrib-amount" required></label>
+                        <label>📅 Date <input type="date" id="contrib-date" required></label>
+                        <button type="submit" class="btn-primary">Confirm Save</button>
+                        <button type="button" onclick="closeContribModal()" class="btn-secondary">Cancel</button>
+                    </form>
+                </div>
             </section>
-            <section id="settings" class="section" style="display: none;">
-                <h2>Settings</h2>
-                <h3>Custom Categories</h3>
-                <form id="category-form">
-                    <input type="text" id="new-category" required>
-                    <button type="submit">Add</button>
-                </form>
-                <ul id="category-list"></ul>
-                <h3>Budget Limits</h3>
-                <form id="budget-limit-form">
-                    <label>Category: <select id="limit-category"></select></label>
-                    <label>Limit: ₱ <input type="number" id="limit-amount" required></label>
-                    <button type="submit">Set Limit</button>
-                </form>
-                <ul id="budget-limits-list"></ul>
-                <h3>Currencies</h3>
-                <form id="currency-form">
-                    <label>Currency Code: <input type="text" id="currency-code" placeholder="e.g., USD" required></label>
-                    <label>Exchange Rate to PHP: <input type="number" id="currency-rate" required></label>
-                    <button type="submit">Add Currency</button>
-                </form>
-                <ul id="currency-list"></ul>
-            </section>
-            <section id="guide" class="section" style="display: none;">
-                <h2>How to Use This App</h2>
-                <p>1. Add income/expenses in Transactions—it auto-calculates everything. Set recurring ones to save time.</p>
-                <p>2. Track debts and pay them off bit by bit.</p>
-                <p>3. Set savings goals and add money towards them.</p>
-                <p>4. Customize categories, budget limits, and currencies in Settings.</p>
-                <p>5. Search or filter transactions to find what you need.</p>
-                <p>6. Check the pie chart on Dashboard for spending by category.</p>
-                <p>7. Get alerts if you’re close to overspending.</p>
-                <p>8. Export to CSV, edit in Google Sheets, then import back.</p>
-                <p>It’s all local—no internet needed after install. Enjoy!</p>
+
+            <section id="settings" class="section card" style="display: none;">
+                <h2>⚙️ Settings</h2>
+                <div class="settings-group">
+                    <h3>⚠️ Data Zone</h3>
+                    <button onclick="exportData()" class="btn-secondary">⬇️ Export CSV</button>
+                    <input type="file" id="import-file" accept=".csv" style="display: none;">
+                    <button onclick="document.getElementById('import-file').click()" class="btn-secondary">⬆️ Import CSV</button>
+                    <button onclick="clearAllData()" class="btn-danger">🗑️ Delete ALL Data</button>
+                </div>
+                <div class="settings-group">
+                    <h3>🏷️ Categories</h3>
+                    <form id="category-form" class="inline-form">
+                        <input type="text" id="new-category" placeholder="New Category" required>
+                        <button type="submit" class="btn-small">Add</button>
+                    </form>
+                    <div id="category-list" class="tags-list"></div>
+                </div>
+                 <div class="settings-group">
+                    <h3>📉 Budget Limits</h3>
+                    <form id="budget-limit-form">
+                        <label>Category <select id="limit-category"></select></label>
+                        <label>Limit (₱) <input type="number" id="limit-amount" required></label>
+                        <button type="submit" class="btn-primary">Set Limit</button>
+                    </form>
+                    <ul id="budget-limits-list" class="list-group"></ul>
+                </div>
             </section>
         </main>
-        <div id="loader" class="spinner" style="display: none;">Loading...</div>
+
+        <footer>
+            <p>© 2025 Filipino Budget Tracker 🇵🇭</p>
+            <button id="scroll-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">⬆️ Top</button>
+        </footer>
+        <div id="loader" class="spinner" style="display: none;"></div>
     </div>
-
-    <script src="./app.js" onerror="alert('CRITICAL ERROR: app.js failed to load. Please check that the file is named exactly \'app.js\' (lowercase) and is in the main folder of your GitHub repository.')"></script>
-
-    <script>
-        window.addEventListener('load', () => {
-            if (typeof showSection === 'undefined') {
-                document.getElementById('app').innerHTML = 
-                    '<div style="color:red;text-align:center;padding:20px;">' +
-                    '<h2>Error: App did not start correctly.</h2>' +
-                    '<p>If you did not get an alert, the file loaded but might have a syntax error.</p>' +
-                    '<p>Please press <b>F12</b> (or right-click -> Inspect), go to the <b>Console</b> tab, and send a screenshot of the red errors you see there.</p>' +
-                    '</div>';
-            }
-        });
-    </script>
+    <script src="./app.js"></script>
 </body>
 </html>
