--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <label>💰 Amount
                             <div class="currency-wrap">
                                 <span class="currency-symbol">₱</span>
-                                <input type="number" id="modal-amount" min="0.01" required>
+                                <input type="number" id="modal-amount" step="0.01" min="0.01" required>
                             </div>
                         </label>
                         <label>📅 Date <input type="date" id="modal-date" required></label>
@@ -154,7 +154,7 @@
                     <label>💰 Target Amount
                          <div class="currency-wrap">
                             <span class="currency-symbol">₱</span>
-                            <input type="number" id="goal-target" placeholder="0.00" min="0.01" required>
+                            <input type="number" id="goal-target" placeholder="0.00" step="0.01" min="0.01" required>
                         </div>
                     </label>
                     <button type="submit" class="btn-primary">➕ Set Goal</button>
@@ -194,7 +194,7 @@
                         <label>Limit Amount
                             <div class="currency-wrap">
                                 <span class="currency-symbol">₱</span>
-                                <input type="number" id="limit-amount" min="0.01" required>
+                                <input type="number" id="limit-amount" step="0.01" min="0.01" required>
                             </div>
                         </label>
                         <button type="submit" class="btn-primary">Set Limit</button>
